synchronize strings, pull translated strings

--- a/src/amazon/res/values-it/strings.xml
+++ b/src/amazon/res/values-it/strings.xml
@@ -22,15 +22,14 @@
     <string name="waiting_a_products">Attendere, prego. Caricamento prodotti da acquistare</string>
     <string name="likes_background_text">Non hai simpatie</string>
     <string name="visitors_background_text">Non ci sono le visite</string>
+    <string name="need_set_avatar">Non puoi fare conoscenze! Imposta l\'immagine del profilo.</string>
     <string name="chat_background_text">Non ci sono i messaggi in entrata</string>
     <string name="entrance">Entrata</string>
     <string name="filter_only_online">Solo online</string>
     <string name="filter_city_age_parameters">Età e città</string>
     <string name="filter_select_city">Scelta della città</string>
     <string name="edit_block_photo">Foto</string>
-    <string name="dashbrd_popup_rating">Ti piace la nostra applicazione? Dacci il tuo voto! Più
-        saliamo noi, più persone interessanti incontrerai su Topface
-    </string>
+    <string name="dashbrd_popup_rating">Ti piace la nostra applicazione? Dacci il tuo voto! Più saliamo noi, più persone interessanti incontrerai su Topface</string>
     <string name="dashbrd_popup_title">Valutazione</string>
     <string name="dashbrd_popup_cancel">Non chiedermelo più</string>
     <string name="dashbrd_popup_rate">Voglio votarvi</string>
@@ -66,18 +65,13 @@
     <string name="vip_invisible_mode">Stato di invisibilità</string>
     <string name="buying_profile_coins">Sul tuo conto</string>
     <string name="vip_info_title">Privilegi di essere VIP</string>
-    <string name="profile_gifts_empty">Questo utente non ha ancora ricevuto regali da nessuno
-    </string>
+    <string name="profile_gifts_empty">Questo utente non ha ancora ricevuto regali da nessuno</string>
     <string name="profile_mygifts_empty">Non hai ancora ricevuto regali da nessuno</string>
-    <string name="dating_people_unnoticed">Hai lasciato sfuggire alla tua vista dieci persone!
-    </string>
+    <string name="dating_people_unnoticed">Hai lasciato sfuggire alla tua vista dieci persone!</string>
     <string name="dating_continue">Continua la relazione</string>
-    <string name="dating_better_look">Guarda meglio!\nPuò darsi che ti stai lasciando sfuggire il
-        tuo destino!
-    </string>
+    <string name="dating_better_look">Guarda meglio!\nPuò darsi che ti stai lasciando sfuggire il tuo destino!</string>
     <string name="edit_my_photos">Mie foto</string>
-    <string name="general_search_empty_title">Purtroppo, la ricerca non ha prodotto risultati
-    </string>
+    <string name="general_search_empty_title">Purtroppo, la ricerca non ha prodotto risultati</string>
     <string name="general_search_empty_text">Puoi rifare la ricerca oppure cambiare le impostazioni
         dei parametri di ricerca
     </string>
@@ -186,6 +180,7 @@
     <string name="general_visitors_tab_views">visite</string>
     <string name="general_profile">Profilo</string>
     <string name="general_settings">Impostazioni</string>
+    <string name="general_vk_profile">VK</string>
     <string name="auth_btn_vk">Vkontakte</string>
     <string name="auth_btn_fb">Facebook</string>
     <string name="auth_retry">Riprovare</string>
@@ -310,8 +305,7 @@
     <string name="settings_ask_developer">Domanda agli sviluppatori</string>
     <string name="settings_payment_problems">Problemi con il pagamento</string>
     <string name="settings_cooperation">Lavora con noi</string>
-    <string name="settings_feedback_success_msg">Grazie, il messaggio è stato inviato con successo
-    </string>
+    <string name="settings_feedback_success_msg">Grazie, il messaggio è stato inviato con successo</string>
     <string name="settings_switch_on">on</string>
     <string name="settings_switch_off">off</string>
     <string name="leaders_go_date">Voglio stare qui</string>
@@ -372,8 +366,7 @@
     <string name="black_list_delete">Elimina dalla black list</string>
     <string name="vip_buy_vip">Acquisto VIP</string>
     <string name="vip_state_off">Il tuo stato VIP non è attivo</string>
-    <string name="vip_info_guest">Scopri chi si è interessato di te, guarda i tuoi visitatori!
-    </string>
+    <string name="vip_info_guest">Scopri chi si è interessato di te, guarda i tuoi visitatori!</string>
     <string name="vip_info_invisible">Rimani invisibile visitando le pagine degli altri grazie allo
         stato di \”invisibilità\”
     </string>
@@ -414,9 +407,7 @@
     </string>
     <string name="default_price_format">Totale: %.2f USD</string>
     <string name="default_price_format_extended">Totale: %1$.2f %2$s</string>
-    <string name="leaders_pick_condition">Non puoi scegliere la foto con il voto medio inferiore al
-        %d%%:
-    </string>
+    <string name="leaders_pick_condition">Non puoi scegliere la foto con il voto medio inferiore al %d%%:</string>
     <string name="general_gift">Regalo</string>
     <string name="user_actions_chat">Chat</string>
     <string name="profile_edit_age_ranges">L’età deve entrare nel campo tra 16 e 99 anni. Per
@@ -443,7 +434,7 @@
     <string name="welcome_to_topface">Benvenuti in Topface!</string>
     <string name="im_boy">Sono un ragazzo</string>
     <string name="im_girl">Sono una ragazza</string>
-    <string name="u_sex">Il vostro sesso</string>
+    <string name="u_sex">Il vostro  sesso</string>
     <string name="incorrect_email">E-mail errata</string>
     <string name="incorrect_login">Login errato</string>
     <string name="incorrect_password">Password errata</string>
@@ -631,8 +622,7 @@
     <string name="settings_select_preload_photo_type">Scegli quando l’anteprima delle foto è
         accesa
     </string>
-    <string name="restart_to_change_locale">L’applicazione sarà riavviata per cambiare lingua
-    </string>
+    <string name="restart_to_change_locale">L’applicazione sarà riavviata per cambiare lingua</string>
     <string name="locale_changing">Lingua</string>
     <plurals name="you_were_liked">
         <item quantity="other">Piaci a %d persone</item>
@@ -679,15 +669,13 @@
     <string name="general_delete_messages">Elimina messaggi</string>
     <string name="skip_all">Salta tutti</string>
     <string name="settings_feedback_transaction_number">Numero dell’ordine</string>
-    <string name="settings_feedback_transaction_link">Dove posso trovare numero dell’ordine?
-    </string>
+    <string name="settings_feedback_transaction_link">Dove posso trovare numero dell’ordine?</string>
     <string name="general_logout_error">Purtroppo il logout non è stato effettuato</string>
     <string name="auth_btn_ok">Odnoklassniki</string>
     <string name="auth_btn_tf">Account Topface</string>
     <string name="birthday">Compleanno</string>
     <string name="other_auth">Accedi tramite altri sistemi</string>
-    <string name="settings_feedback_transaction_number_hint">Inserisci il numero dell’ordine
-    </string>
+    <string name="settings_feedback_transaction_number_hint">Inserisci il numero dell’ordine</string>
     <string name="delete_visitors">Elimina visitatori</string>
     <string name="delete_admirations">Elimina ammirazioni</string>
     <string name="general_admirations">Ammirazioni</string>
@@ -731,8 +719,7 @@
     </string>
     <string name="waiting_for_load">Attesa di caricamento…</string>
     <string name="loading_photo_percent">Caricamento della foto %d%%</string>
-    <string name="profile_update_error">Si è verificato un errore durante l’aggiornamento dati
-    </string>
+    <string name="profile_update_error">Si è verificato un errore durante l’aggiornamento dati</string>
     <string name="retry_cancel_editing">Si è verificato un errore sul server durante l’aggiornamento
         dati. Uscire senza salvare o riprovare?
     </string>
@@ -852,4 +839,21 @@
     <string name="novice_sympathies_bonus">Riceverai %1$d simpatie in\nregalo! Significa che\ndi
         sicuro piacerai a %2$d persone\nche ti dimostreranno la loro simpatia
     </string>
+    <string name="go_dating_message">Comincia a fare conoscenze e in questa sezione vedrai gli utenti che hanno visitato il tuo profilo</string>
+    <string name="vk_profile_button_tf_group">Gruppo Topface</string>
+    <string name="vk_profile_button_join_tf_group">Entra nel gruppo Topface</string>
+    <string name="vk_profile_button_join_vkgames_group">Entra nel gruppo \" Giochi  Vkontakte\"</string>
+    <string name="vk_profile_button_invite_friends">Invita amici</string>
+    <string name="vk_profile_invite_friends_title">Invita amici</string>
+    <string name="invite_friend_button">Invita</string>
+    <string name="invitation_sended_button">Inviato</string>
+    <string name="friends_empty_list_error">La lista dei tuoi amici è vuota</string>
+    <string name="vk_friends_success_invite">Invito inviato</string>
+    <string name="join_group_success">Adesso fai parte del gruppo</string>
+    <string name="settings_auto_greeting_title">Auto</string>
+    <string name="settings_auto_greeting_subtitle">Permette di cominciare automaticamente un dialogo 
+         di conoscenza dopo la ricezione della simpatia</string>
+    <string name="chat_auto_reply_title">Il testo del messaggio è nascosto</string>
+    <string name="chat_auto_reply_message">Per aprirlo e rispondere diventa utente- VIP</string>
+    <string name="chat_auto_reply_button">Diventa VIP</string>
 </resources>
