--- a/src/amazon/res/values-tr/strings.xml
+++ b/src/amazon/res/values-tr/strings.xml
@@ -23,15 +23,14 @@
     </string>
     <string name="likes_background_text">Sempati yok</string>
     <string name="visitors_background_text">Misafirler yok</string>
+    <string name="need_set_avatar">Bu şekilde seni kimse tanıyamaz! Hemen bir profil resmi yükle.</string>
     <string name="chat_background_text">Gelen mesaj yok</string>
     <string name="entrance">Gir</string>
     <string name="filter_only_online">Sadece çevrim içi</string>
     <string name="filter_city_age_parameters">Yaş ve şehir</string>
     <string name="filter_select_city">Şehir seçeneği</string>
     <string name="edit_block_photo">Fotoğraflar</string>
-    <string name="dashbrd_popup_rating">Ekimizi mi beğendin? Reytingimizi yükselt! Reyting ne kadar
-        yüksekse o kadar çok ilginç insanlarla Topface’de karşılaşırsın
-    </string>
+    <string name="dashbrd_popup_rating">Ekimizi mi beğendin? Reytingimizi yükselt! Reyting ne kadar yüksekse o kadar çok ilginç insanlarla Topface’de karşılaşırsın</string>
     <string name="dashbrd_popup_title">Reyting</string>
     <string name="dashbrd_popup_cancel">Bir daha sorma</string>
     <string name="dashbrd_popup_rate">Reyting göstermek</string>
@@ -182,6 +181,7 @@
     <string name="general_visitors_tab_views">görüntülemeler</string>
     <string name="general_profile">Profil</string>
     <string name="general_settings">Ayarlar</string>
+    <string name="general_vk_profile">VK</string>
     <string name="auth_btn_vk">VKontakte</string>
     <string name="auth_btn_fb">Facebook</string>
     <string name="auth_retry">Tekrar deneyin</string>
@@ -223,12 +223,9 @@
         <item quantity="one">Bir mesaj atmak için %d para alın</item>
     </plurals>
     <plurals name="buying_unlock_likes_you_need_coins">
-        <item quantity="zero">Birinin sizi beğendiğini görmek için daha fazla %d para satın alın
-        </item>
-        <item quantity="other">Birinin sizi beğendiğini görmek için daha fazla %d para satın alın
-        </item>
-        <item quantity="one">Birinin sizi beğendiğini görmek için daha fazla %d para satın alın
-        </item>
+        <item quantity="zero">Birinin sizi beğendiğini görmek için daha fazla  %d para satın alın</item>
+        <item quantity="other">Birinin sizi beğendiğini görmek için daha fazla  %d para satın alın</item>
+        <item quantity="one">Birinin sizi beğendiğini görmek için daha fazla  %d para satın alın</item>
     </plurals>
     <plurals name="buying_leaders_you_need_coins">
         <item quantity="zero">Görünmek için daha fazla %d para gerekli</item>
@@ -310,8 +307,7 @@
     <string name="settings_ask_developer">Geliştiricilere soru</string>
     <string name="settings_payment_problems">Ödeme sorunları</string>
     <string name="settings_cooperation">Ortaklık</string>
-    <string name="settings_feedback_success_msg">Teşekkürler, mesaj başarılıyla gönderilmiştir
-    </string>
+    <string name="settings_feedback_success_msg">Teşekkürler, mesaj başarılıyla gönderilmiştir</string>
     <string name="settings_switch_on">aç</string>
     <string name="settings_switch_off">kapat</string>
     <string name="leaders_go_date">Buraya istiyorum</string>
@@ -354,7 +350,7 @@
     <string name="edit_refresh_status">Durumu yenilemek</string>
     <string name="ban_title">Tebrikler! Siz ban edildiniz</string>
     <string name="ban_title_forever">Tebrikler! Hayat boyu engellendiniz!</string>
-    <string name="ban_title_until">Tebrikler! %s kadar engellendiniz.</string>
+    <string name="ban_title_until">Tebrikler!  %s kadar engellendiniz.</string>
     <string name="ban_complain">Engellemeyi şikayet etmek</string>
     <string name="general_ready">Hazır</string>
     <string name="buying_store_ok">Alış başarılıyla tamamlanmıştır</string>
@@ -823,12 +819,29 @@
     <string name="trial_vip_button_text">VIP statüsü edinin</string>
     <string name="settings_check_vip_title">VIP statüsünün aktif olup olmadığını kontrol et</string>
     <string name="settings_check_vip_cell">VIP statüsünü kontrol et</string>
-    <string name="settings_check_vip_alert">VIP statüsünün kontrol edilmesi talebiniz iletildi.
-    </string>
+    <string name="settings_check_vip_alert">VIP statüsünün kontrol edilmesi talebiniz iletildi.</string>
     <string name="novice_sympathy">Hoş bir tanışma başlamak \niçin \ngerçekten hoşlandığınız
         kişilere sempati gönderin
     </string>
     <string name="novice_sympathies_bonus">Siz %1$d \nhediye olarak kazandınız! – Bu demek ki %2$d
         kişi sizi \nkesinlikle beğenir ve sempatileri size \ngösterir.
     </string>
+    <string name="go_dating_message">Yeni arkadaşlar bulmaya başla, bu sayfada profile bakanları görebilirsin.</string>
+    <string name="vk_profile_button_tf_group">Topface grubu</string>
+    <string name="vk_profile_button_join_tf_group">Topface grubuna katıl</string>
+    <string name="vk_profile_button_join_vkgames_group">\"VK oyunları\" grubuna katıl</string>
+    <string name="vk_profile_button_invite_friends">Arkadaşlarını davet et</string>
+    <string name="vk_profile_invite_friends_title">Arkadaşlarını davet et</string>
+    <string name="invite_friend_button">Davet et</string>
+    <string name="invitation_sended_button">Davet gönder</string>
+    <string name="friends_empty_list_error">Arkadaş listen boş</string>
+    <string name="vk_friends_success_invite">Davet gönderildi</string>
+    <string name="join_group_success">Gruba üye oldunuz</string>
+    <string name="settings_auto_greeting_title">Otomatik-selam</string>
+    <string name="settings_auto_greeting_subtitle">Birisi size beğeni gönderdiğinde otomatik olarak selam gönderilmesi ve sohbet başlatılması için Topface\'e izin verin.</string>
+    <string name="chat_auto_reply_title">Mesaj yazısı gizlenmiş.</string>
+    <string name="chat_auto_reply_message">Bu mesajı açmak ve okumak için VIP üye olman gerekiyor.</string>
+    <string name="chat_auto_reply_button">VIP üye ol</string>
+    <string name="take_photo_text_1">Arkadaş bulmaya başlamak için lütfen fotoğrafınızı yükleyiniz.</string>
+    <string name="take_photo_text_2">Fotoğraf size ait olmalı ve içerisinde siz olmalısınız. Modaratörlerimiz tüm fotoğrafları kontrol etmektedir.</string>
 </resources>
