--- a/src/ifree/res/values-ru/strings.xml
+++ b/src/ifree/res/values-ru/strings.xml
@@ -930,7 +930,7 @@
     <string name="enter_text">Введите текст</string>
     <string name="send_feedback">Отправить сообщение</string>
     <string name="get_vip_free">Получи VIP бесплатно</string>
-    <string name="buy_more_sympathies">\"Получай больше симпатий, становись популярнее\"</string>
+    <string name="buy_more_sympathies">Получай больше симпатий, становись популярнее</string>
     <string name="transaction_code_help">Если вы отправите нам код транзакции, это может помочь в
         выполнение вашего запроса, а так же ускорит его обработку. Подробную информацию о заказе,
         можно получить через %s.
