--- a/src/blueStacks/res/values/strings.xml
+++ b/src/blueStacks/res/values/strings.xml
@@ -101,7 +101,7 @@
     <item quantity="other">%d free coins</item>
     <item quantity="one">%d free coin</item>
   </plurals>
-  <string name="pincode_blocking_app">Lock app</string>
+  <string name="pincode_blocking_app">Lock the app</string>
   <string name="pincode_blocking">Lock</string>
   <string name="pincode_reset">Reset your PIN code</string>
   <string name="pincode_set">Set a PIN code</string>
@@ -687,7 +687,7 @@
   <string name="enter_text">Enter text</string>
   <string name="send_feedback">Send message</string>
   <string name="get_vip_free">Get free VIP-status</string>
-  <string name="buy_more_sympathies">\&quot;Get more likes, become more popular\&quot;</string>
+  <string name="buy_more_sympathies">Get more likes, become more popular</string>
   <string name="transaction_code_help">If you send us a transaction code, this will help us
         complete your request by speeding up the processing time. Further information about an order
         can be found through %s.</string>
@@ -736,7 +736,7 @@
   <string name="settings_check_vip_alert">Your request to check VIP-status has been sent.</string>
   <string name="novice_sympathy">Send Likes only to those\nwho really attract you.\nYou just might
         find someone special!</string>
-  <string name="novice_sympathies_bonus">You are getting %1$d Likes as a gift! It means that %2$d
+  <string name="novice_sympathies_bonus">You are getting %1$d Likes as a\ngift! It means that %2$d
         people will give you a Like and genuinely mean it!</string>
   <string name="go_dating_message">Start dating and you will who view you page here</string>
   <string name="vk_profile_button_tf_group">Spark group</string>
