--- a/src/google/res/values-ru/strings.xml
+++ b/src/google/res/values-ru/strings.xml
@@ -1005,6 +1005,8 @@
     </string>
 
     <plurals name="novice_sympathies_bonus">
+        <item quantity="zero">Вы получаете %1$d симпатий в\nподарок! Это означает, что
+            вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
         <item quantity="one">Вы получаете %1$d симпатию в\nподарок! Это означает, что
         вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</item>
         <item quantity="many">Вы получаете %1$d симпатий в\nподарок! Это означает, что
