--- a/src/blueStacks/res/values-ru/strings.xml
+++ b/src/blueStacks/res/values-ru/strings.xml
@@ -823,8 +823,7 @@
   <string name="enter_text">Введите текст</string>
   <string name="send_feedback">Отправить сообщение</string>
   <string name="get_vip_free">Получи VIP бесплатно</string>
-  <string name="buy_more_sympathies">\&quot;Получай больше симпатий, становись
-    популярнее\&quot;</string>
+  <string name="buy_more_sympathies">Получай больше симпатий, становись популярнее</string>
   <string name="transaction_code_help">Если вы отправите нам код транзакции, это может помочь в
         выполнение вашего запроса, а так же ускорит его обработку. Подробную информацию о заказе,
     можно получить через %s.
@@ -885,6 +884,9 @@
     начать приятное знакомство
   </string>
   <plurals name="novice_sympathies_bonus">
+    <item quantity="zero">Вы получаете %1$d симпатий в\nподарок! Это означает, что
+      вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию
+    </item>
     <item quantity="one">Вы получаете %1$d симпатию в\nподарок! Это означает, что
       вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию
     </item>
