--- a/src/blueStacks/res/values/strings.xml
+++ b/src/blueStacks/res/values/strings.xml
@@ -760,7 +760,7 @@
   <string name="enter_text">Enter text</string>
   <string name="send_feedback">Send message</string>
   <string name="get_vip_free">Get free VIP-status</string>
-  <string name="buy_more_sympathies">\&quot;Get more likes, become more popular\&quot;</string>
+  <string name="buy_more_sympathies">Get more likes, become more popular</string>
   <string name="transaction_code_help">If you send us a transaction code, this will help us
     complete your request by speeding up the processing time. Further information about an order
     can be found through %s.
