--- a/src/blueStacks/res/values-de/strings.xml
+++ b/src/blueStacks/res/values-de/strings.xml
@@ -856,6 +856,17 @@
   <string name="novice_sympathy">Senden Sie Sympathien den Menschen, die Ihnen\nwirklich
     gefallen,\num eine angenehme Bekanntschaft anzufangen
   </string>
+  <plurals name="novice_sympathies_bonus">
+    <item quantity="zero">Du bekommst %1$d Likes als ein \nGeschenk! Das bedeutet, das diejenigen,
+      \ndie dir Likes schicken, %2$d dich \nwirklich mögen.
+    </item>
+    <item quantity="other">Du bekommst %1$d Likes als ein \nGeschenk! Das bedeutet, das diejenigen,
+      \ndie dir Likes schicken, %2$d dich \nwirklich mögen.
+    </item>
+    <item quantity="one">Du bekommst %1$d Like als ein \nGeschenk! Das bedeutet, das diejenigen,
+      \ndie dir Likes schicken, %2$d dich \nwirklich mögen.
+    </item>
+  </plurals>
   <string name="go_dating_message">Fange an, Leute kennenzulernen und die Namen derjenigen, die dein
     Profil besucht haben, werden hier erscheinen.
   </string>
@@ -893,4 +904,9 @@
   <string name="take_photo_text_2">Nur du selbst solltest auf dem Foto abgebildet sein; alle Fotos
     werden von Moderatoren überprüft um sicherzustellen, dass den Regeln gefolgt wird.
   </string>
+  <string name="unlock_by_viewed_ad_video_button_text">Gratis entsperren bei %s</string>
+  <plurals name="free_minutes">
+    <item quantity="other">%d Minuten</item>
+    <item quantity="one">%d Minute</item>
+  </plurals>
 </resources>
