--- a/src/google/res/values-de/strings.xml
+++ b/src/google/res/values-de/strings.xml
@@ -781,6 +781,11 @@
     <string name="novice_sympathy">Senden Sie Sympathien den Menschen, die Ihnen\nwirklich
         gefallen,\num eine angenehme Bekanntschaft anzufangen
     </string>
+    <plurals name="novice_sympathies_bonus">
+        <item quantity="zero">Du bekommst %1$d Likes als ein \nGeschenk! Das bedeutet, das diejenigen, \ndie dir Likes schicken, %2$d  dich \nwirklich mögen.</item>
+        <item quantity="other">Du bekommst %1$d Likes als ein \nGeschenk! Das bedeutet, das diejenigen, \ndie dir Likes schicken, %2$d  dich \nwirklich mögen.</item>
+        <item quantity="one">Du bekommst %1$d Like als ein \nGeschenk! Das bedeutet, das diejenigen, \ndie dir Likes schicken, %2$d  dich \nwirklich mögen.</item>
+    </plurals>
     <string name="go_dating_message">Fange an, Leute kennenzulernen und die Namen derjenigen, die dein Profil besucht haben, werden hier erscheinen.</string>
     <string name="photo_not_from_main_album">Unsere Moderatoren haben entschieden, dass dieses Foto nicht als Profilfoto verwendet werden darf.</string>
     <string name="sidebar_vk_profile">VK Profil</string>
@@ -805,4 +810,9 @@
     <string name="settings_auto_greeting_subtitle">Erlaube Topface, automatisch ein Gespräch zu starten, wenn dir jemand ein Like schickt</string>
     <string name="take_photo_text_1">Bitte lade ein Foto von dir hoch, um zu chatten.</string>
     <string name="take_photo_text_2">Nur du selbst solltest auf dem Foto abgebildet sein; alle Fotos werden von Moderatoren überprüft um sicherzustellen, dass den Regeln gefolgt wird.</string>
+    <string name="unlock_by_viewed_ad_video_button_text">Gratis entsperren bei %s</string>
+    <plurals name="free_minutes">
+        <item quantity="other">%d Minuten</item>
+        <item quantity="one">%d Minute</item>
+    </plurals>
 </resources>
